2005-06-13  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Update
	* nb.po: Updated Norwegian bokmål translation.
	* no.po: Same

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * rw.po: Added Kinyarwanda translation.

2005-03-16  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Updated Canadian English translation.

2005-01-20  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Update
	* no.po: Update

2005-01-19  Alessio Frusciante  <algol@firenze.linux.it>

	* it.po: Added Italian translation by
	Daniele Cocca <danielecocca@yahoo.it>.

2004-12-03  Funda Wang  <fundawang@linux.net.cn>

	* zh_CN.po: Added Simplified Chinese translation.

2004-10-31  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Taco Witte.

2004-10-22  Hendrik Brandt  <hebra@cvs.gnome.org>

	* de.po: Updated German translation.
	
2004-09-11  Christophe Merlet  <redfox@redfoxcenter.org>

	* fr.po: Updated French translation from
	Audrey Simons <asimons@redhat.com>.

2004-09-09  Ankit Patel <ankit@redhat.com>

	* gu.po: Added Gujarati Translation.

2004-09-04  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanih translation.

2004-08-31  Hendrik Brandt  <hebra@cvs.gnome.org>

	* de.po: Added German translation.

2004-08-30  Christian Rose  <menthos@menthos.com>

	* sv.po: Added Swedish translation.

2004-08-23  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Elros Cyriatan.

2004-08-21  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: added Spanish translation.

2004-08-17  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation added by Elros Cyriatan.

2004-08-12  Gustavo Maciel Dias Vieira  <gustavo@sagui.org>

	* pt_BR.po: Updated Brazilian Portuguese translation done by
	Raphael Higino <raphaelh@uai.com.br>.

2004-08-10  Gustavo Maciel Dias Vieira  <gustavo@sagui.org>

	* pt_BR.po: Added Brazilian Portuguese translation done by Raphael
	Higino <raphaelh@uai.com.br>.
