@@ -3,6 +3,7 @@
 *.pot
 Makefile
 Makefile.in
+Makefile.in.in
 POTFILES
 cat-id-tbl.c
 messages
