@@ -1,3 +1,8 @@
+2005-06-13  Bastien Nocera  <hadess@hadess.net>
+
+	* .cvsignore: upd
+	* Makefile.in.in: removed, shouldn't be in CVS
+
 2005-06-13  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* POTFILES.in: Update
